[gd_scene load_steps=10 format=2]

[ext_resource path="res://assets/Begok v15_2015___free.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://assets/icons_ui/prestige_blue.png" type="Texture" id=2]
[ext_resource path="res://HUDSystem.gd" type="Script" id=3]
[ext_resource path="res://assets/icons_ui/temperature_jauge_slim.png" type="Texture" id=4]
[ext_resource path="res://assets/icons_ui/overlay_system.png" type="Texture" id=5]

[sub_resource type="CanvasItemMaterial" id=4]
light_mode = 1

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 12
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 12
font_data = ExtResource( 1 )

[node name="HUDSystem" type="Node2D"]
material = SubResource( 4 )
script = ExtResource( 3 )

[node name="Lazer" type="Sprite" parent="."]
position = Vector2( 480.03, 271.428 )
texture = ExtResource( 5 )

[node name="ReinitPlanet" type="Button" parent="."]
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = 694.833
margin_top = 490.189
margin_right = 770.833
margin_bottom = 514.189
custom_fonts/font = SubResource( 1 )
text = "reinit"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ChangeGaz1" type="Button" parent="."]
margin_left = 700.841
margin_top = 370.585
margin_right = 857.841
margin_bottom = 394.585
custom_fonts/font = SubResource( 1 )
text = "change to 1"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ChangeGaz2" type="Button" parent="."]
margin_left = 704.296
margin_top = 405.695
margin_right = 859.296
margin_bottom = 429.695
custom_fonts/font = SubResource( 1 )
text = "change to 2"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CoutChanges" type="Label" parent="."]
margin_left = 823.71
margin_top = 455.22
margin_right = 894.71
margin_bottom = 480.22
custom_fonts/font = SubResource( 1 )
text = "1000"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AtmoLabel" type="Label" parent="."]
margin_left = 709.336
margin_top = 325.06
margin_right = 864.336
margin_bottom = 364.06
custom_fonts/font = SubResource( 1 )
text = "change 
atmosphere"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TempLabel" type="Label" parent="."]
margin_left = 661.0
margin_top = 219.0
margin_right = 747.0
margin_bottom = 252.0
custom_fonts/font = SubResource( 1 )
text = "temp"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TotalLabel" type="Label" parent="."]
margin_left = 705.556
margin_top = 456.091
margin_right = 780.556
margin_bottom = 474.091
custom_fonts/font = SubResource( 1 )
text = "total"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TempMin" type="Label" parent="."]
margin_left = 795.717
margin_top = 217.717
margin_right = 839.717
margin_bottom = 235.717
custom_fonts/font = SubResource( 1 )
text = "20"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TempMax" type="Label" parent="."]
margin_left = 872.852
margin_top = 217.717
margin_right = 913.852
margin_bottom = 235.717
custom_fonts/font = SubResource( 1 )
text = "50"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MoneySprite" type="Sprite" parent="."]
position = Vector2( 915.962, 475.872 )
texture = ExtResource( 2 )
offset = Vector2( 0, -16 )

[node name="IconeTmp" type="Sprite" parent="."]
position = Vector2( 849.288, 244.425 )
texture = ExtResource( 4 )

[node name="Valider" type="Button" parent="."]
margin_left = 811.389
margin_top = 490.11
margin_right = 931.389
margin_bottom = 514.11
custom_fonts/font = SubResource( 1 )
text = "validate"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Atmosphere" type="Label" parent="."]
margin_left = 645.08
margin_top = 260.804
margin_right = 750.08
margin_bottom = 278.804
custom_fonts/font = SubResource( 2 )
text = "atm"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Currentgaz" type="Label" parent="."]
margin_left = 811.0
margin_top = 257.0
margin_right = 890.0
margin_bottom = 275.0
custom_fonts/font = SubResource( 3 )
text = "oxygen"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="ChangeGaz1" to="." method="_on_ChangeGaz1_pressed"]
[connection signal="pressed" from="ChangeGaz2" to="." method="_on_ChangeGaz2_pressed"]
[connection signal="pressed" from="Valider" to="." method="_on_Valider_pressed"]
